--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Nasa API</title>
 	</head>
 	<body>
 		<slot />
@@ -15,8 +14,36 @@
 <style>
 	html,
 	body {
+		font-family: 'Roboto', 'Times New Roman', Times, serif;
 		margin: 0;
 		width: 100%;
 		height: 100%;
 	}
+
+	@font-face {
+		font-family: 'Roboto';
+		src: url('../public/fonts/Roboto-Regular.woff2') format('woff2');
+		font-weight: 100 900;
+		font-stretch: 75% 100%;
+		font-display: swap;
+	}
+
+	@font-face {
+		font-family: 'Roboto-Italic';
+		src: url('../public/fonts/Roboto-Italic.woff2') format('woff2');
+		font-weight: 100 900;
+		font-stretch: 75% 100%;
+		font-style: italic;
+		font-display: swap;
+	}
+
+	@font-face {
+		font-family: 'Roboto-Bold';
+		src: url('../public/fonts/Roboto-Bold.woff2') format('woff2');
+		font-weight: 700;
+		font-stretch: 75% 100%;
+		font-display: swap;
+	}
+
+
 </style>
