update: Index.astro Media Querys

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,7 +72,7 @@ import Search from '../assets/search.svg';
 	.nav_derecha a {
 		color: white;
 		text-decoration: none;
-		margin-left: 6rem;
+		margin-left: 4rem;
 		font-size: 1.3rem;
 		transition: color 0.3s;
 		padding: 0.5rem 1rem;
@@ -88,9 +88,12 @@ import Search from '../assets/search.svg';
 	.main_content {
 		text-align: center;
 		color: white;
-		margin-top: 8rem;
-		padding: 0 2rem;
-
+		align-content: center;
+		flex: 1 0 auto;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
 	}
 
 	.main_content h1 {
@@ -152,5 +155,104 @@ import Search from '../assets/search.svg';
 		font-style: italic;
 		flex-shrink: 0;
 		margin-top: auto;
+	}
+
+	@media (max-width: 1024px) {
+		nav {
+			padding: 1rem 1.5rem;
+		}
+		.nav_derecha a {
+			margin-left: 2rem;
+			font-size: 1.1rem;
+			padding: 0.4rem 0.7rem;
+		}
+		.main_content {
+			margin: 5rem 0rem;
+		}
+		.input_container input {
+			width: 300px;
+		}
+		.input_container img {
+			width: 26px;
+			height: 26px;
+		}
+	}
+
+	@media (max-width: 700px) {
+		nav {
+			flex-direction: column;
+			align-items: flex-start;
+			gap: 1rem;
+			padding: 1rem 1rem;
+		}
+		.nav_izquierda {
+			width: 100%;
+			display: flex;
+			justify-content: center;
+		}
+		.nav_izquierda img {
+			width: 70px;
+		}
+		.nav_derecha {
+			width: 100%;
+			display: flex;
+			justify-content: center;
+			flex-wrap: wrap;
+			gap: 0.5rem;
+		}
+		.nav_derecha a {
+			margin-left: 0;
+			font-size: 1rem;
+			padding: 0.3rem 0.5rem;
+		}
+		.main_content {
+			margin: 3rem 0rem;
+			padding: 0 0.5rem;
+		}
+		.input_container input {
+			width: 180px;
+			font-size: 1rem;
+			padding: 0.7rem;
+		}
+		.input_container img {
+			width: 22px;
+			height: 22px;
+		}
+		.main_content h1 {
+			font-size: 3rem;
+		}
+		.main_content p {
+			font-size: 0.8rem;
+		}
+		footer {
+			flex-direction: column;
+			gap: 0.5rem;
+			padding: 1rem 0.5rem;
+			font-size: 0.95rem;
+			text-align: center;
+		}
+	}
+
+	@media (max-width: 400px) {
+		.main_content h1 {
+			font-size: 2rem;
+		}
+		.main_content p {
+			max-width: 40ch;
+			font-size: 0.7rem;
+		}
+		.input_container input {
+			width: 110px;
+			font-size: 0.8rem;
+			padding: 0.5rem;
+		}
+		.input_container img {
+			width: 16px;
+			height: 16px;
+		}
+		footer {
+			font-size: 0.8rem;
+			padding: 0.5rem 0.2rem;
+		}
 	}
 </style>
