feat: mission page started

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/src/assets/logo.png" />
 		<title>Nasa API</title>
 	</head>
 	<body>
@@ -12,6 +12,15 @@
 </html>
 
 <style>
+	* {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+	}
+	*::before,
+	*::after {
+		box-sizing: border-box;
+	}
 	html,
 	body {
 		font-family: 'Roboto', 'Times New Roman', Times, serif;
