--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@
 
 	@font-face {
 		font-family: 'Roboto';
-		src: url('../public/fonts/Roboto-Regular.woff2') format('woff2');
+		src: url('/fonts/Roboto-Regular.woff2') format('woff2');
 		font-weight: 100 900;
 		font-stretch: 75% 100%;
 		font-display: swap;
@@ -39,7 +39,7 @@
 
 	@font-face {
 		font-family: 'Roboto-Italic';
-		src: url('../public/fonts/Roboto-Italic.woff2') format('woff2');
+		src: url('/fonts/Roboto-Italic.woff2') format('woff2');
 		font-weight: 100 900;
 		font-stretch: 75% 100%;
 		font-style: italic;
@@ -48,7 +48,7 @@
 
 	@font-face {
 		font-family: 'Roboto-Bold';
-		src: url('../public/fonts/Roboto-Bold.woff2') format('woff2');
+		src: url('/fonts/Roboto-Bold.woff2') format('woff2');
 		font-weight: 700;
 		font-stretch: 75% 100%;
 		font-display: swap;
