--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,8 +10,7 @@ import Logo from '../assets/logo.png';
 	</div>
 	<div class="nav_derecha">
 		<a href="/">Home</a>
-		<a href="/mission">Mission</a>
-		<a href="/about">Explorer</a>
+		<a href="/mission">APOD</a>
 		<a href="/contact">About</a>
 	</div>
 </nav>
@@ -30,6 +29,7 @@ import Logo from '../assets/logo.png';
 	}
 
 	.nav_derecha a {
+		font-family: 'Roboto-Bold', sans-serif;
 		color: white;
 		text-decoration: none;
 		margin-left: 4rem;
