--- a/src/pages/mission.astro
+++ b/src/pages/mission.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import Navbar from '../components/Navbar.astro';
 import Footer from '../components/Footer.astro';
+import RightArrow from '../assets/right.svg';
 
 const API_KEY = import.meta.env.NASA_API_KEY || "DEMO_KEY";
 const res = await fetch(`https://api.nasa.gov/planetary/apod?api_key=${API_KEY}&count=4`);
@@ -39,7 +40,7 @@ const apods = await res.json();
 			<h1>Asteroids NeoWs</h1>
 			<p>Near Earth Object Web Service
 			Track close approaches of asteroids and comets with real-time data on potentially hazardous objects near our planet.</p>
-			<a href="">Learn More</a>
+			<a href="">Learn More <img src={RightArrow.src} alt="right icon"></a>
 		</div>
 
 		<Footer />
@@ -215,6 +216,19 @@ const apods = await res.json();
 		text-decoration: none;
 		margin: 0.7rem 3rem;
 		max-width: fit-content;
+		display: inline-flex;
+		align-items: center;
+		vertical-align: middle;
+	}
+
+	.middle_space img {
+		margin-left: 1rem;
+		padding: 0.2rem;
+		background-color: rgb(255, 51, 0);
+		border-radius: 50%;
+		width: 17px;
+		display: inline-block;
+		vertical-align: middle;
 	}
 
 
@@ -295,14 +309,30 @@ const apods = await res.json();
 		.hero h1 {
 			font-size: 2.2rem;
 		}
+		.middle_space {
+			text-align: center;
+			justify-content: center;
+			align-items: center;
+		}
 		.middle_space h1 {
 			font-size: 2rem;
+		}
+		.middle_space p,
+		.middle_space a {
+			max-width: 56ch;
 		}
 	}
 
 	@media (max-width: 500px) {
+		.top_space {
+			height: auto;
+		}
 		.hero {
-			margin: 2rem 0.3rem;
+			margin: 4rem 0rem;
+		}
+
+		.hero p {
+			max-width: 50ch;
 		}
 		.hero h1 {
 			font-size: 1.3rem;
@@ -311,7 +341,7 @@ const apods = await res.json();
 			font-size: 0.6rem;
 		}
 		.title_section {
-			margin: 1rem 0.3rem;
+			margin: 2rem 1rem 1rem;
 		}
 		.title_section h1 {
 			font-size: 1.2rem;
@@ -320,7 +350,7 @@ const apods = await res.json();
 			font-size: 0.8rem;
 		}
 		.main_content {
-			margin: 0rem 0.2rem 1rem;
+			margin: 0rem 1rem 3rem;
 			gap: 0.3rem;
 		}
 		.apod_card {
@@ -332,6 +362,15 @@ const apods = await res.json();
 		.apod_info {
 			padding: 0.5rem;
 		}
+		.middle_space {
+			margin: 0;
+			height: auto;
+			text-align: center;
+			justify-content: center;
+			align-items: center;
+			padding: 3rem 0rem;
+		}
+
 		.middle_space h1 {
 			font-size: 1.1rem;
 			margin: 0.5rem 0.3rem;
@@ -340,6 +379,13 @@ const apods = await res.json();
 		.middle_space a {
 			font-size: 0.7rem;
 			margin: 0.5rem 0.3rem;
+			max-width: 40ch;
+		}
+
+		.middle_space img {
+			width: 10px;
+			padding: 0.1rem;
+			margin-left: 0.5rem;
 		}
 	}
 
