feat: About Us page

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,8 +10,8 @@ import Logo from '../assets/logo.png';
 	</div>
 	<div class="nav_derecha">
 		<a href="/">Home</a>
+		<a href="/about">About Us</a>
 		<a href="/mission">APOD</a>
-		<a href="/contact">About</a>
 	</div>
 </nav>
 
