--- a/src/pages/mission.astro
+++ b/src/pages/mission.astro
@@ -79,7 +79,7 @@ const apods = await res.json();
 		font-size: 1.1rem;
 		max-width: 70ch;
 		line-height: 1.3;
-		color: rgb(255, 255, 255);;
+		color: rgb(255, 255, 255);
 	}
 
 	.title_section {
