--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,9 @@
 import Layout from "../layouts/Layout.astro";
 import Navbar from '../components/Navbar.astro';
 import Footer from '../components/Footer.astro';
+
+import imagen from '../assets/image.webp';
+import RightArrow from '../assets/right.svg';
 ---
 
 <Layout title="About">
@@ -24,12 +27,14 @@ import Footer from '../components/Footer.astro';
             <hr>
             <div class="content_info">
                 <div class="content_info_left">
-                    <h1>Title</h1>
-                    <p>Description</p>
+                    <h1>NASA Today</h1>
+                    <p>NASA explores the unknown in air and space, innovates for the benefit of humanity, and inspires the world through discovery. For more than 65 years, NASA has made the seemingly impossible, possible. At its 20 centers and facilities across the country and with U.S. commercial companies and international partners, NASA leads studying Earth science, including climate, our Sun, solar system, and the larger universe. We conduct cutting-edge research to advance technology and aeronautics. We operate the world’s leading space laboratory, the International Space Station, and will establish a sustainable and strong exploration presence on the Moon this decade through the Artemis campaign.</p>
+                    <a href="">NASA Centers and Facilities <img src={RightArrow.src} alt="right icon"></a>
                 </div>
                 <div class="content_info_right">
-                    <img src="" alt="">
-                    <p>image description</p>
+                    <img src={imagen.src} alt="image icon">
+                    <p>Technicians inside the Payload Hazardous Servicing Facility at Kennedy Space Center install and test antennas on a solar array on Wednesday, March 20, 2024, for the agency’s Europa Clipper spacecraft which will study Jupiter’s icy moon, Europa, to determine if the planet can support life.
+                    <strong>NASA/Isaac Watson</strong></p>
                 </div>
             </div>
         </div>
@@ -109,6 +114,120 @@ import Footer from '../components/Footer.astro';
         border: none;
         cursor: pointer;
         padding: 0;
+    }
+
+    .content hr {
+        border: 0;
+        border-top: 1px solid #bbbbbb;
+    }
+
+    .content_info {
+        display: flex;
+        gap: 4rem;
+        margin-top: 3rem;
+    }
+
+    .content_info .content_info_left h1 {
+        font-family: 'Roboto-Bold', sans-serif;
+        font-size: 2.3rem;
+        margin: 0;
+    }
+
+    .content_info .content_info_left p {
+        font-size: 1rem;
+        line-height: 1.6rem;
+        margin-top: 1rem;
+        color: rgb(66, 66, 66);
+        max-width: 64ch;
+    }
+
+    .content_info .content_info_left a {
+        font-size: 1.2rem;
+        font-family: 'Roboto-Bold', sans-serif;
+        margin-top: 1rem;
+        text-decoration: none;
+        display: inline-flex;
+		align-items: center;
+		vertical-align: middle;
+        color: black;
+    }
+
+    .content_info .content_info_left img {
+		margin-left: 1rem;
+		padding: 0.15rem;
+		background-color: rgb(255, 51, 0);
+		border-radius: 50%;
+		width: 13px;
+		display: inline-block;
+		vertical-align: middle;
+	}
+
+    .content_info .content_info_right {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .content_info .content_info_right img {
+        width: 100%;
+        height: auto;
+    }
+
+    .content_info .content_info_right p {
+        font-family: 'Roboto-italic', sans-serif;
+        font-size: 0.8rem;
+        color: rgb(100, 100, 100);
+        margin-top: 1rem;
+        line-height: 1.3rem;
+    }
+
+    .content_info .content_info_right p strong {
+        color: black;
+    }
+
+    @media (max-width: 900px) {
+        .nav_hero {
+            height: auto;
+        }
+        .hero {
+            margin: 10rem 2rem;
+            align-items: center;
+            text-align: center;
+        }
+        .hero h1 {
+            font-size: 3.5rem;
+        }
+        .hero p {
+            font-size: 1rem;
+            max-width: 40ch;
+        }
+        .hero a {
+            font-size: 1.2rem;
+            padding: 0.5rem 1rem;
+        }
+        .content {
+            margin: 4rem 2rem;
+        }
+        .content .btn_list {
+            justify-content: center;
+            gap: 4rem;
+            flex-wrap: wrap;
+        }
+        .content_info {
+            flex-direction: column;
+            gap: 2rem;
+        }
+        .content_info .content_info_left h1 {
+            font-size: 2rem;
+        }
+        .content_info .content_info_left p {
+            font-size: 0.9rem;
+            max-width: 100%;
+        }
+        .content_info .content_info_left a {
+            font-size: 1rem;
+        }
     }
 
 </style>
