--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,11 +4,16 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/src/assets/logo.png" />
+
+		<!-- preload fonts -->
 		<link rel="preload" href="/fonts/Roboto-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="preload" href="/fonts/Roboto-Italic.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="preload" href="/fonts/Roboto-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
-		
+		<!-- preload bg images -->
+		<link rel="preload" as="image" href="src/assets/bg.webp" type="image/webp">
+
+
 
 		<title>Nasa API</title>
 	</head>
