update: restart commit

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -45,7 +45,7 @@ import RightArrow from '../assets/right.svg';
 <style>
     .nav_hero {
 		height: 100vh;
-		background-image: url(../assets/bg4.webp);    
+		background-image: url(../assets/bg4.png);    
         background-size: cover;
 		display: flex;
 		flex-direction: column;
