--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import Search from '../assets/search.svg';
 <style>
 	main {
 		height: 100vh;
-		background-image: url(../assets/bg.webp);
+		background-image: url(../assets/bg.jpg);
 		background-size: cover;
 		background-position: center;
 		display: flex;
