--- a/src/pages/mission.astro
+++ b/src/pages/mission.astro
@@ -4,15 +4,10 @@ import Navbar from '../components/Navbar.astro';
 import Footer from '../components/Footer.astro';
 import RightArrow from '../assets/right.svg';
 
-// API fetching
 const API_KEY = import.meta.env.NASA_API_KEY || "DEMO_KEY";
 const res = await fetch(`https://api.nasa.gov/planetary/apod?api_key=${API_KEY}&count=4`);
 const apods = await res.json();
 
-// Cloudinary settings
-const API_CLOUDINARY = import.meta.env.CLOUD_NAME;
-const optimize = (url: string): string => 
-  `https://res.cloudinary.com/${API_CLOUDINARY}/image/fetch/f_auto,q_auto,w_800/${url}`;
 ---
 
 <Layout title="Mission">
@@ -31,19 +26,14 @@ const optimize = (url: string): string =>
 		</div>
 
 		<div class="main_content">
-			{apods && apods.map(apod => (
-			<div class="apod_card">
-				<img
-				src={optimize(apod.url)}
-				alt={apod.title}
-				loading="lazy"
-				/>
-				<div class="apod_overlay"></div>
-				<div class="apod_info">
-				<span class="apod_date">{apod.date}</span>
-				<h2 class="apod_title">{apod.title}</h2>
+			{apods && Array.isArray(apods) && apods.map(apod => (
+				<div class="apod_card" style={`background-image: url('${apod.url}');`}>
+					<div class="apod_overlay"></div>
+					<div class="apod_info">
+						<span class="apod_date">{apod.date}</span>
+						<h2 class="apod_title">{apod.title}</h2>
+					</div>
 				</div>
-			</div>
 			))}
 		</div>
 
@@ -62,7 +52,7 @@ const optimize = (url: string): string =>
 <style>
     .top_space {
 		height: 98vh;
-		background-image: url(../assets/bg2.webp);
+		background-image: url(../assets/bg2.png);
 		background-size: cover;
 		background-position: center;
 		display: flex;
@@ -192,7 +182,7 @@ const optimize = (url: string): string =>
 	}
 
 	.middle_space {
-		background-image: url(../assets/bg3.webp);
+		background-image: url(../assets/bg3.jpg);
 		background-size: cover;
 		background-position: center;
 		height: 100vh;
