--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -163,6 +163,7 @@ if (date) {
     }
     .content_left p {
       max-width: 90%;
+      text-align: start;
     }
     .content_right img {
       height: 350px;
@@ -170,6 +171,10 @@ if (date) {
   }
 
   @media (max-width: 700px) {
+    .navbar {
+      padding-bottom: 1rem;
+    }
+
     .Main_content {
       flex-direction: column;
       padding: 4rem 2rem;
