--- a/src/pages/mission.astro
+++ b/src/pages/mission.astro
@@ -359,10 +359,13 @@ const apods = await res.json();
 			max-width: 50ch;
 		}
 		.hero h1 {
-			font-size: 1.3rem;
+			font-size: 2rem;
+			margin: 0 1rem 1rem;
+			text-align: center;
 		}
 		.hero p {
 			font-size: 0.6rem;
+			color: #d8d8d8;
 		}
 		.title_section {
 			margin: 2rem 1rem 1rem;
